# extract_data

./: .gitignore  LICENSE  README.md  main.py  pyproject.toml
app/connectors/: openai.py
app/routers/: send_message.py  upload_files.py
app/schemas/: message.py  receipt.py
app/services/: upload_service.py
app/utils/: base64.py  image_processing.py  parser_csv.py  validators.py  xlsx_builder.py
templates/: index.html
